<resources>
    <string name="reserve">Réserver</string>
    <string name="review">Laisser un avis</string>
    <string name="fabMap">Ouvrir la carte</string>
    <string name="appName">Mini projet</string>
    <string name="star">Etoile</string>
    <string name="picturesLabel">Photos (%d)</string>
    <string name="enterYourReview">Entrez votre avis…</string>
    <string name="submitReview">Ajouter cet avis</string>
    <string name="templateRestaurantName">Restaurant Name</string>
    <string name="templateBody">Body</string>
    <string name="symbolAdd">+</string>
    <string name="selectedImage">Image selectionnée</string>
    <string name="chooseImage">Choisir une image</string>
    <string name="add">Ajouter</string>
    <string name="ok">OK</string>
    <string name="validate">Valider</string>
    <string name="addPictureTitle">Ajouter une photo</string>
    <string name="nbPersons">Nombre de personnes</string>
    <string name="noun">Midi</string>
    <string name="evening">Soir</string>
    <string name="templateTitle">Titre</string>
    <string name="_1">1</string>
    <string name="enterYourName">Entrez votre nom…</string>
    <string name="camera">Appareil photo</string>
    <string name="storedPicture">Photo existante</string>
    <string name="filtre_1">Filtre Microphone </string>
    <string name="filtre_2">Filtre Orientation</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="informations">Infos</string>
    <string name="avis">Avis</string>
    <string name="date">date</string>
    <string name="viewPictureTitle">Prévisualisation de l\'image</string>
    <string name="modify">Modifier</string>
    <string name="delete">Supprimer</string>
    <string name="deleteOfReview">Supprimer de l\'avis</string>
    <string name="authors">Matthias Farges et Sylvain Roehrig</string>
    <string name="note">Note</string>
    <string name="nbAvis">nbAvis</string>
</resources>