<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/restaurantTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTop"
        android:gravity="center"
        android:text="@string/templateRestaurantName"
        android:textSize="@dimen/h1Size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/reviewEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTop"
        android:autofillHints="reviewString"
        android:gravity="top"
        android:hint="@string/enterYourReview"
        android:inputType="textMultiLine"
        android:lines="6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/restaurantTitle" />

    <LinearLayout
        android:id="@+id/rating_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTop"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reviewEditText">

        <ImageView
            android:id="@+id/star1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/star"
            android:src="@drawable/ic_star_filled_34"
            android:tag="1" />

        <ImageView
            android:id="@+id/star2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/star"
            android:src="@drawable/ic_star_filled_34"
            android:tag="2" />

        <ImageView
            android:id="@+id/star3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/star"
            android:src="@drawable/ic_star_filled_34"
            android:tag="3" />

        <ImageView
            android:id="@+id/star4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/star"
            android:src="@drawable/ic_star_outline_34"
            android:tag="4" />

        <ImageView
            android:id="@+id/star5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/star"
            android:src="@drawable/ic_star_outline_34"
            android:tag="5" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollViewImages"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/submitReviewBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rating_layout">

        <TextView
            android:id="@+id/picturesTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginTop"
            android:text="@string/picturesLabel" />

    </ScrollView>

    <Button
        android:id="@+id/submitReviewBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/submitReview"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scrollViewImages"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>
